templates/quarkus_template.yaml
---
# Source: quarkus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name
  labels:
    helm.sh/chart: quarkus
    app.kubernetes.io/name: release-name
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.openshift.io/runtime: quarkus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: release-name
    app.kubernetes.io/instance: release-name
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
---
# Source: quarkus/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name
  labels:
    helm.sh/chart: quarkus
    app.kubernetes.io/name: release-name
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.openshift.io/runtime: quarkus
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from":{
            "kind":"ImageStreamTag",
            "name":"release-name:latest"
          },
          "fieldPath":"spec.template.spec.containers[0].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: quarkus
        app.kubernetes.io/name: release-name
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - name: web
          image: release-name:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
      volumes:
---
# Source: quarkus/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-name
  labels:
    helm.sh/chart: quarkus
    app.kubernetes.io/name: release-name
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.openshift.io/runtime: quarkus
spec:
  to:
    kind: Service
    name: release-name
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
